# cpp_workspace_example

./: .gitignore  README.md  array_of_ptr.cpp  array_of_ptr2.cpp  boost_lexical_cast_example.cpp  c20_coroutine_example.cpp  const_pointer.cpp  const_ptr.cpp  cpp_basic_thread.cpp  cpp_vector_demo.cpp  define_macro.cpp  dyn_array_of_array_ptr.cpp  dyn_array_of_dyn_array_ptr.cpp  dyn_array_of_ptr.cpp  logical_compare.cpp  pointer_offset1.cpp  print_func_address.cpp  ptr_mgr_1.cpp  ptr_mgr_basic.cpp  ptr_ref_func_param.cpp  ptr_to_ptr.cpp  ptr_to_ref.cpp  ptr_to_void.cpp  random_num.cpp  reassigned_reference.cpp  reference_address.cpp  reference_and_pointer.cpp  reference_example.cpp  system_pause.cpp  template_ptr_example.cpp  typedef_func_pointer.c  unique_ptr_example.cpp
caf-example/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  compile_commands.sh  vcpkg.json
caf-example/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
caf-example/source/: lib.cpp  main.cpp
caf-example/source/demos/: demo_01_hello_world.cpp  demo_02_typed_calculator.cpp  demo_03_stateful_counter.cpp  demo_04_request_then.cpp  demo_05_behavior_switching.cpp  demo_06_delayed_messages.cpp  demo_07_error_handling.cpp  demo_08_monitoring.cpp  demo_09_custom_types.cpp  demo_10_fan_out.cpp  demo_11_data_flow.cpp  demo_12_ping_pong.cpp  demo_13_delegation.cpp  demo_14_game_room.cpp  demo_15_distribution.cpp  demos.hpp  types.hpp
caf-example/test/: CMakeLists.txt
caf-example/test/source/: caf-example_test.cpp
cmake_project_demo/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  build.sh  vcpkg.json
cmake_project_demo/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
cmake_project_demo/source/: lib.cpp
cmake_project_demo/test/: CMakeLists.txt
cmake_project_demo/test/source/: cmake_project_demo_test.cpp
folly_example/: CMakeLists.txt  build.sh
folly_example/src/: main.cpp
folly_example2/: CMakeLists.txt  build.sh
folly_example2/src/: main.cpp
folly_task_example/: CMakeLists.txt  build.sh
folly_task_example/src/: main.cpp
lambda_example/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
lambda_example/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
lambda_example/source/: lambda_demos.cpp  lambda_demos.hpp  lib.cpp  main.cpp
lambda_example/test/: CMakeLists.txt
lambda_example/test/source/: lambda_example_test.cpp
onetbb_demo/: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  build.sh  compile_commands.sh  vcpkg.json
onetbb_demo/source/: lib.cpp  lib.hpp  main.cpp  tbb_coroutine.hpp
onetbb_demo/test/: CMakeLists.txt
onetbb_demo/test/source/: onetbb_demo_test.cpp
print_func_address/: CMakeLists.txt  build.sh
puerts_example/: package.json  tsconfig.json
puerts_example/puerts_ts_example/: package.json
puerts_example/puerts_ts_example/src/: index.ts
puerts_example/puerts_ts_example/src/hello_world/: index.d.ts
puerts_example/src/: index.ts
v8_example/: CMakeLists.txt  main.cpp
v8_example/v8/: CMakeLists.txt
